Fix search modal jump (#150)
* update amsterdam-design-system to 1.1.0 and fix changes

* fix styles and broken tests

* resolve desktop search modal bug

--- a/src/theme/Navbar/Content/styles.module.css
+++ b/src/theme/Navbar/Content/styles.module.css
@@ -7,7 +7,7 @@ Hide color mode toggle in small viewports
   }
 }
 
-.buttons {
+/* .buttons {
   display: flex;
   align-items: center;
 }
@@ -32,4 +32,4 @@ Hide color mode toggle in small viewports
 
 [data-theme='dark'] .icon:hover {
   background: var(--ifm-color-emphasis-200);
-}
+} */
